# inpsPyPI

./: README.md  __init__.py  convert.py  easy_sql.py  pyproject.toml  sort.py  test_all.py
.github/workflows/: build_inpsPyPI.yml
